syntax = "proto3";

package io.pipeline.opensearch.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "opensearch_document.proto";

option java_package = "io.pipeline.opensearch.v1";
option java_multiple_files = true;

// The OpenSearchManagerService handles schema management, index lifecycle, 
// and administrative operations for OpenSearch indices.
service OpenSearchManagerService {
  // Schema Management (from schema_manager.proto)
  rpc EnsureNestedEmbeddingsFieldExists(EnsureNestedEmbeddingsFieldExistsRequest) returns (EnsureNestedEmbeddingsFieldExistsResponse);
  
  // Index Lifecycle Operations
  rpc CreateIndex(CreateIndexRequest) returns (CreateIndexResponse);
  rpc DeleteIndex(DeleteIndexRequest) returns (DeleteIndexResponse);
  rpc IndexExists(IndexExistsRequest) returns (IndexExistsResponse);
  
  // Document Operations (single documents)
  rpc IndexDocument(IndexDocumentRequest) returns (IndexDocumentResponse);
  rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse);
  rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse);
  
  // Admin Operations
  rpc GetIndexStats(GetIndexStatsRequest) returns (GetIndexStatsResponse);
  rpc ListIndices(ListIndicesRequest) returns (ListIndicesResponse);
}

// === Schema Management Messages (from schema_manager.proto) ===

message EnsureNestedEmbeddingsFieldExistsRequest {
  string index_name = 1;
  string nested_field_name = 2;
  VectorFieldDefinition vector_field_definition = 3;
}

message VectorFieldDefinition {
  int32 dimension = 1;
  KnnMethodDefinition knn_method = 2;
}

message KnnMethodDefinition {
  enum KnnEngine {
    LUCENE = 0;
  }

  enum SpaceType {
    L2 = 0;
    COSINESIMIL = 1;
    INNERPRODUCT = 2;
  }

  KnnEngine engine = 1;
  SpaceType space_type = 2;
  KnnParametersDefinition parameters = 3;
}

message KnnParametersDefinition {
  google.protobuf.Int32Value m = 1;
  google.protobuf.Int32Value ef_construction = 2;
  google.protobuf.Int32Value ef_search = 3;
}

message EnsureNestedEmbeddingsFieldExistsResponse {
  bool schema_existed = 1;
}

// === Index Lifecycle Messages ===

message CreateIndexRequest {
  string index_name = 1;
  VectorFieldDefinition vector_field_definition = 2;
  optional string document_type = 3;
  optional google.protobuf.Struct settings = 4;
}

message CreateIndexResponse {
  bool success = 1;
  string message = 2;
}

message DeleteIndexRequest {
  string index_name = 1;
}

message DeleteIndexResponse {
  bool success = 1;
  string message = 2;
}

message IndexExistsRequest {
  string index_name = 1;
}

message IndexExistsResponse {
  bool exists = 1;
}

// === Document Operation Messages ===

message IndexDocumentRequest {
  string index_name = 1;
  OpenSearchDocument document = 2;
  optional string document_id = 3;
  optional string routing = 4;
}

message IndexDocumentResponse {
  bool success = 1;
  string document_id = 2;
  string message = 3;
}

message DeleteDocumentRequest {
  string index_name = 1;
  string document_id = 2;
  optional string routing = 3;
}

message DeleteDocumentResponse {
  bool success = 1;
  string message = 2;
}

message GetDocumentRequest {
  string index_name = 1;
  string document_id = 2;
  optional string routing = 3;
}

message GetDocumentResponse {
  bool found = 1;
  optional OpenSearchDocument document = 2;
  string message = 3;
}

// === Admin Operation Messages ===

message GetIndexStatsRequest {
  string index_name = 1;
}

message GetIndexStatsResponse {
  bool success = 1;
  int64 document_count = 2;
  int64 size_in_bytes = 3;
  google.protobuf.Struct additional_stats = 4;
  string message = 5;
}

message ListIndicesRequest {
  optional string prefix_filter = 1;
}

message ListIndicesResponse {
  repeated IndexInfo indices = 1;
}

message IndexInfo {
  string name = 1;
  int64 document_count = 2;
  int64 size_in_bytes = 3;
  string status = 4;
}